# Aptiv

./: GIL_paper.docx  Student _In_Practice_Harnek Singh.docx  ot_04_f360_tracker_pipeline.groovy
Aptiv_Deeksha_Gopal/: CMakeLists.txt  Jenkinsfile  LICENSE.txt
Aptiv_Deeksha_Gopal/AmunraCodification/: CMakeLists.txt  Jenkinsfile  LICENSE  README.md  pytest.ini
Aptiv_Deeksha_Gopal/AmunraCodification/environment/: Dockerfile  docker-compose.yaml
Aptiv_Deeksha_Gopal/AmunraCodification/environment/resources/: jenkins-casc.yaml  plugins.txt
Aptiv_Deeksha_Gopal/AmunraCodification/scripts/helper/: script_helper.py
Aptiv_Deeksha_Gopal/AmunraCodification/scripts/helper/ut/: ut_scripts.py
Aptiv_Deeksha_Gopal/AmunraCodification/src/: CMakeLists.txt  MatrixMultiplicationFunction.cpp  StandardDeviation.cpp
Aptiv_Deeksha_Gopal/envirnoment/: Dockerfile.txt  docker-compose.yaml
Aptiv_Deeksha_Gopal/envirnoment/resources/: jenkins-casc.yaml  plugins.txt
Deeksha_Documents/: Copy of Timesheet_Draft_FinalVersion.xlsx  Jenkins_job_dsl_creation.docx  Timesheet_Feb_March.xlsx  try.oxps
core_comp_d_j/: Dockerfile  Jenkinsfile  Task_1Core_comp_D_J.rar
core_comp_d_j/Cmake_installing/: gerrit_password.txt
core_comp_d_j/Task_5/Sandbox_Repo_01/: Jenkinsfile  Readme.md  job_dsl_multibranch.groovy  jobdsl.groovy  patcheset2  test  test3
core_comp_d_j/Task_5/Sandbox_Repo_01/ci/: fail.Jenkinsfile  main_integ.Jenkinsfile  steps_post.Jenkinsfile
core_comp_d_j/Task_5/jenkins file/: Jenkinsfile
core_comp_d_j/gcc_installing/: Dockerfile  test_file
(+2 files in other folders)
